CORE-47200: mobile view alignment issue.

--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/user/_user-title.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/user/_user-title.scss
@@ -114,5 +114,10 @@
       margin-top: rem(16);
       top: rem(-64);
     }
+
+    @include breakpoint($only-mobile) {
+      top: rem(-52);
+      width: 100%;
+    }
   }
 }
